enum MessageType
{
    TXTMSG                       = 0;
    IMGMSG                       = 1;
    VCMSG                        = 2;
    IMGTEXTMSG                   = 3;
    LBSMSG                       = 4;
    CONTACTNTF                   = 5;
    INFONTF                      = 6;
    SYSTEMMSG                    = 7;
    WULIUMSG                     = 8;
    ACTIVITYMSG                  = 9;
    REBATESMSG                   = 10;
    ORDERMSG                     = 11;
    AFTERSALEMSG                 = 12;
    FRIENDMSG                    = 13;
}

message IMMessage
{
    required MessageType type      = 1;
    required bool is_group         = 2;
    required string from_id        = 3;
    repeated string to_ids         = 4;
    optional string content        = 5; 
    optional string image_uri      = 6;
    optional int32 duration        = 7;
    optional string title          = 8;
    optional float latitude        = 9;
    optional float longitude       = 10;
    optional string poi            = 11;
    optional string operation      = 12;
    optional string source_use_rid = 13;
    optional string target_user_id = 14;
    optional string extra          = 15;
    optional bool is_broadcast     = 16;
    optional string push_content   = 17;
    optional string push_data      = 18;
}